test/src/declarator/scenarios/fail/input/overloads2.h
#pragma once

#include "TS.h"
#include "std/tsnumber.h"

TS_EXPORT Number* getNumber();

TS_EXPORT Number* capacity();
TS_EXPORT void capacity(Number* d);
